# BOOTSTRAP-AGENCY-TEMPLATE

./: LICENSE.md  Makefile.am  README.md  autogen.sh  configure.ac  design.md
examples/: Makefile.am  README.md  dl_client.c  wdp_client.html  wdp_client.js  wi_client.c  ws_client.html  ws_echo1.c  ws_echo2.c  ws_echo_common.c  ws_echo_common.h
include/: Makefile.am  getline.h  strcasestr.h  strndup.h  validate_utf8.h
include/ios-webkit-debug-proxy/: device_listener.h  ios_webkit_debug_proxy.h  socket_manager.h  webinspector.h  websocket.h
src/: Makefile.am  base64.c  base64.h  char_buffer.c  char_buffer.h  device_listener.c  hash_table.c  hash_table.h  ios_webkit_debug_proxy.c  ios_webkit_debug_proxy_main.c  port_config.c  port_config.h  rpc.c  rpc.h  sha1.c  sha1.h  socket_manager.c  webinspector.c  websocket.c
